Relleno de pestaña Sobre Mi

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="imagen-fila-tecnologia"><img src="logos-lenguajes/logo-ruby.webp" alt="Ruby">Ruby</div>
                 </div>
             </div>
-            <div class="caja-sobremi">Soy un estudiante de Programacion Autodidacta en constante crecimiento. Hice varios cursos en diferentes plataformas de tecnología como: </div>
+            <div class="caja-sobremi"><p>Soy un estudiante de Programacion Autodidacta en constante crecimiento.<br>Hice varios cursos en diferentes plataformas de tecnología como:<br>Platzi, FreeCodeCamp, SoloLearn, Alura + Oracle, Argentina Programa, Ticmas, YouTube.<br>En ellos aprendí sobre diferentes lenguajes y tecnologias que implemento en mis proyectos diariamente.<br>HTML, CSS, JavaScript, Ruby, jQuery, React, GitHub.<br>Soy una persona que esta en constante aprendizaje, puede ver mis certificaciones en la pestaña de experiencia; y mis trabajos realizados y proyectos en la pagina de GitHub con sus correspondientes repositorios de codigos si esta interesado en saber mas sobre mi desarrollo.<br>Tambien lo/a invito visitar mi perfil en LikedIn para mas informacion sobre mi.<br><br>Mis saludos cordialmente.<br><br>Andres Gomez</p></div>
         </div>
 
         <div class="derecha">
